[project]
name = "burpee-tracker"
version = "1.0.0"
description = "Real-time burpee tracking with computer vision"
authors = [{name = "Simon Wong", email = "smw2@ualberta.ca"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]

[project.urls]
Homepage = "https://simonwong.site"

[project.scripts]
burpee-tracker = "burpee_tracker:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["burpee_tracker"]